# filmit-pipeline

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/agent/: __init__.py  context_builder.py  retrieval_service.py  runtime.py  service.py  tool_registry.py
apps/api/app/api/: routes.py
apps/api/app/core/: config.py
apps/api/app/db/: models.py  session.py
apps/api/app/schemas/: agent.py  chapter.py  demo.py  document.py  project.py  prompt.py  provider.py  review.py  step.py  storyboard.py  style.py
apps/api/app/services/: demo_service.py  object_storage_service.py  pipeline_service.py  prompt_service.py  storage_service.py  style_service.py
apps/api/tests/: helpers.py  test_agent_session.py  test_batch_run_all_chapters.py  test_consistency_rollback.py  test_demo_import.py  test_final_export.py  test_local_ingest_chunking.py  test_openrouter_cost_estimation.py  test_pipeline_flow.py  test_prompt_templates.py  test_segment_video_polling.py  test_shot_detail_parsing.py  test_source_document_input.py  test_story_bible_references.py  test_storyboard_gallery.py  test_storyboard_prompt_safety.py  test_style_profile.py
apps/web/: Dockerfile  package.json  playwright.config.ts
docs/: architecture-v1.0.0.md  architecture-v1.1.0.md  filmit-agentization-implementation-plan.md
infra/compose/: README.md
libs/prompt_templates/: baseline_prompts.yaml
scripts/: bootstrap.sh  run_demo_1408.py
workers/llm_worker/: tasks.py
workers/media_worker/: tasks.py
(+21 files in other folders)
