[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "n2v-api"
version = "1.0.0"
description = "Novel to Video pipeline API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
  "pydantic>=2.10.3",
  "pydantic-settings>=2.6.1",
  "python-multipart>=0.0.12",
  "celery>=5.4.0",
  "redis>=5.2.0",
  "httpx>=0.28.1",
  "pypdf>=5.4.0",
  "Pillow>=11.1.0",
  "imageio-ffmpeg>=0.6.0",
  "edge-tts>=7.2.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
